# delivery-ICT

./: .gitignore  README.md  pyproject.toml  requirements.txt
create_dashboard/SAP_Flow_Automation/: ecosearch_uid.json  sapflow_automation.py
create_dashboard/SAP_Flow_Automation/sample_grafana_json/: modified_data_dsapi-parallel-nosy-enthusiasm-ict_international.sxc1p704.json  modified_data_dsapi-shrill-unused-if-ict_international.sxc1p703.json  sample.json
create_workflow/: constant.py  entry.py  make.py
create_workflow/sample_manifest/: manifest.json
fetch_platform_from_excel/: Ecosearch SRL 2x sfm1x-c.xlsx  fetch_platform_from_excel.py
