[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sap-flow"
version = "0.1.0"
authors = [{name = "Mia Ma", email = "mia.ma@eratos.com"}]
dependencies = [
    "certifi==2025.7.14",
    "cftime==1.6.4.post1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "deepmerge==2.0",
    "eratos-as-api @ git+https://github.com/eratosio/as-models-api.git@f31218c97404dc821e1d3a3aff4ef9850bfec4ba",
    "eratos-sdk==0.18.1",
    "eratos-sensor==2.17.0",
    "et_xmlfile==2.0.0",
    "Flask==2.2.3",
    "h5py==3.14.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    "netCDF4==1.7.2",
    "numpy==2.3.1",
    "openpyxl==3.2.0b1",
    "pandas==2.3.1",
    "PyJWT==2.10.1",
    "pyproj==3.7.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "shapely==2.1.1",
    "six==1.17.0",
    "tabulate==0.9.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "Werkzeug==2.3.8",
]
